minor bug fixes

--- a/LaTeX/Literature.bib
+++ b/LaTeX/Literature.bib
@@ -81,7 +81,7 @@
   urldate = {2021-08-04},
   abstract = {How do they make those movies of the beating heart?},
   langid = {english},
-  organization = {{Questions and Answers \mbox in MRI}},
+  organization = {{Questions and Answers \hspace{0pt}in MRI}},
   file = {/Users/Heni/Zotero/storage/IWB2ERJD/beating-heart-movies.html}
 }
 
@@ -147,6 +147,26 @@
   urldate = {2021-08-26},
   langid = {english},
   file = {/Users/Heni/Zotero/storage/WKKKQKLF/Fast and robust online adaptive planning in stereo.pdf;/Users/Heni/Zotero/storage/SZMMEE5L/S0167814017324982.html}
+}
+
+@article{fastTumourAutocontouring2d2017,
+  title = {Tumour Auto-Contouring on 2d Cine {{MRI}} for Locally Advanced Lung Cancer: {{A}} Comparative Study},
+  shorttitle = {Tumour Auto-Contouring on 2d Cine {{MRI}} for Locally Advanced Lung Cancer},
+  author = {Fast, Martin F. and Eiben, Björn and Menten, Martin J. and Wetscherek, Andreas and Hawkes, David J. and McClelland, Jamie R. and Oelfke, Uwe},
+  date = {2017-12-01},
+  journaltitle = {Radiotherapy and Oncology},
+  shortjournal = {Radiotherapy and Oncology},
+  volume = {125},
+  number = {3},
+  pages = {485--491},
+  issn = {0167-8140},
+  doi = {10.1016/j.radonc.2017.09.013},
+  url = {https://www.sciencedirect.com/science/article/pii/S016781401732580X},
+  urldate = {2021-09-18},
+  abstract = {Background and purpose Radiotherapy guidance based on magnetic resonance imaging (MRI) is currently becoming a clinical reality. Fast 2d cine MRI sequences are expected to increase the precision of radiation delivery by facilitating tumour delineation during treatment. This study compares four auto-contouring algorithms for the task of delineating the primary tumour in six locally advanced (LA) lung cancer patients. Material and methods Twenty-two cine MRI sequences were acquired using either a balanced steady-state free precession or a spoiled gradient echo imaging technique. Contours derived by the auto-contouring algorithms were compared against manual reference contours. A selection of eight image data sets was also used to assess the inter-observer delineation uncertainty. Results Algorithmically derived contours agreed well with the manual reference contours (median Dice similarity index: ⩾0.91). Multi-template matching and deformable image registration performed significantly better than feature-driven registration and the pulse-coupled neural network (PCNN). Neither MRI sequence nor image orientation was a conclusive predictor for algorithmic performance. Motion significantly degraded the performance of the PCNN. The inter-observer variability was of the same order of magnitude as the algorithmic performance. Conclusion Auto-contouring of tumours on cine MRI is feasible in LA lung cancer patients. Despite large variations in implementation complexity, the different algorithms all have relatively similar performance.},
+  langid = {english},
+  keywords = {Auto-contouring,Locally advanced lung cancer,Lung tumour tracking,MRI-guided radiotherapy},
+  file = {/Users/Heni/Zotero/storage/C2U5EB2W/Fast et al. - 2017 - Tumour auto-contouring on 2d cine MRI for locally .pdf;/Users/Heni/Zotero/storage/X92RGV8C/S016781401732580X.html}
 }
 
 @article{gianfaldoniOverviewRadiotherapyIts2017,
@@ -463,7 +483,17 @@
   eventtitle = {2020 {{IEEE}}/{{CVF Conference}} on {{Computer Vision}} and {{Pattern Recognition}} ({{CVPR}})},
   isbn = {978-1-72817-168-5},
   langid = {english},
-  file = {/Users/Heni/Zotero/storage/Q95K25YN/Liao_Iteratively-Refined_Interactive_3D_Medical_Image_Segmentation_With_Multi-Agent_Reinforcement_Learning_CVPR_2020_paper.pdf}
+  file = {/Users/Heni/Zotero/storage/Q95K25YN/Liao et al. - 2020 - Iteratively-Refined Interactive 3D Medical Image S.pdf}
+}
+
+@online{LinearbeschleunigerLinac,
+  title = {Linearbeschleuniger (Linac)},
+  url = {https://medizinphysik.wiki/linearbeschleuniger/},
+  urldate = {2021-09-11},
+  abstract = {Medizinische Linearbeschleuniger (engl. LINAC) nutzen geladene hochenergetische Teilchen zur Behandlung bestimmter Erkrankungen wie Tumore.},
+  langid = {german},
+  organization = {{Medizinische Physik}},
+  file = {/Users/Heni/Zotero/storage/Q7TDYQ4E/linearbeschleuniger.html}
 }
 
 @book{lineyMRIRadiotherapyPlanning2019,
@@ -564,6 +594,29 @@
   file = {/Users/Heni/Zotero/storage/3K2IKNDD/plans.html}
 }
 
+@online{QDockWidgetClassQt,
+  title = {{{QDockWidget Class}} | {{Qt Widgets}} 5.15.6},
+  url = {https://doc.qt.io/qt-5/qdockwidget.html},
+  urldate = {2021-09-11},
+  file = {/Users/Heni/Zotero/storage/946BFW3E/qdockwidget.html}
+}
+
+@online{RiverbankComputingIntroduction,
+  title = {Riverbank {{Computing}} | {{Introduction}}},
+  url = {https://riverbankcomputing.com/software/pyqt/intro},
+  urldate = {2021-09-11},
+  file = {/Users/Heni/Zotero/storage/M98KSRSQ/intro.html}
+}
+
+@online{SecondAnnualData,
+  title = {Second {{Annual Data Science Bowl}}},
+  url = {https://kaggle.com/c/second-annual-data-science-bowl},
+  urldate = {2021-09-20},
+  abstract = {Transforming How We Diagnose Heart Disease},
+  langid = {english},
+  file = {/Users/Heni/Zotero/storage/T7KBUVRU/rules.html}
+}
+
 @article{shihavuddinSmooth2DManifold2017,
   title = {Smooth {{2D}} Manifold Extraction from {{3D}} Image Stack},
   author = {Shihavuddin, Asm and Basu, Sreetama and Rexhepaj, Elton and Delestro, Felipe and Menezes, Nikita and Sigoillot, Séverine M and Del Nery, Elaine and Selimi, Fekrije and Spassky, Nathalie and Genovesio, Auguste},
@@ -640,6 +693,23 @@
   urldate = {2021-08-18},
   langid = {english},
   file = {/Users/Heni/Zotero/storage/T9P6QR6J/A Technique for Generating Volumetric Cine-Magneti.pdf;/Users/Heni/Zotero/storage/UPYSJEH8/S0360301616001255.html}
+}
+
+@online{TumourAutocontouring2d,
+  title = {Tumour Auto-Contouring on 2d Cine {{MRI}} for Locally Advanced Lung Cancer: {{A}} Comparative Study | {{Elsevier Enhanced Reader}}},
+  shorttitle = {Tumour Auto-Contouring on 2d Cine {{MRI}} for Locally Advanced Lung Cancer},
+  doi = {10.1016/j.radonc.2017.09.013},
+  url = {https://reader.elsevier.com/reader/sd/pii/S016781401732580X?token=88D339EA725355756A024FF16855DE8F491F2115460BB6FFB9772E085E5DDAEEBC716C57AFA272E4567333DEBB3A4A30&originRegion=eu-west-1&originCreation=20210918115522},
+  urldate = {2021-09-18},
+  langid = {english},
+  file = {/Users/Heni/Zotero/storage/L2WXLTMB/Tumour auto-contouring on 2d cine MRI for locally .pdf;/Users/Heni/Zotero/storage/N9J3ZZUD/Tumour auto-contouring on 2d cine MRI for locally .pdf;/Users/Heni/Zotero/storage/RBU5DGAC/S016781401732580X.html}
+}
+
+@online{TypesRadiationTherapy,
+  title = {Types of {{Radiation Therapy}} | {{SEER Training}}},
+  url = {https://training.seer.cancer.gov/treatment/radiation/types.html},
+  urldate = {2021-09-11},
+  file = {/Users/Heni/Zotero/storage/BMRQXR8C/types.html}
 }
 
 @article{vangeunsBasicPrinciplesMagnetic1999,
