resize window after closing meta data tab

--- a/LaTeX/Literature.bib
+++ b/LaTeX/Literature.bib
@@ -262,6 +262,22 @@
   file = {/Users/Heni/Zotero/storage/68SFS57G/Heckel et al. - 2013 - Sketch-Based Editing Tools for Tumour Segmentation.pdf;/Users/Heni/Zotero/storage/EVQGPP9X/cgf.html}
 }
 
+@article{hehakayaProblemsPromisesIntroducing2020,
+  title = {Problems and {{Promises}} of {{Introducing}} the {{Magnetic Resonance Imaging Linear Accelerator Into Routine Care}}: {{The Case}} of {{Prostate Cancer}}},
+  shorttitle = {Problems and {{Promises}} of {{Introducing}} the {{Magnetic Resonance Imaging Linear Accelerator Into Routine Care}}},
+  author = {Hehakaya, Charisma and Van der Voort van Zyp, Jochem R. and Lagendijk, Jan J. W. and Grobbee, Diederick E. and Verkooijen, Helena M. and Moors, Ellen H. M.},
+  date = {2020},
+  journaltitle = {Frontiers in Oncology},
+  volume = {10},
+  pages = {1741},
+  issn = {2234-943X},
+  doi = {10.3389/fonc.2020.01741},
+  url = {https://www.frontiersin.org/article/10.3389/fonc.2020.01741},
+  urldate = {2021-09-30},
+  abstract = {The new radiotherapy high field, 1.5 Tesla MRI-guided linear accelerator (MR-Linac) is being clinically introduced. Sensing and evaluating opportunities and barriers at an early stage will facilitate its eventual scale-up. This study investigates the opportunities and barriers to the implementation of MR-Linac into prostate cancer care based on 43 semi-structured interviews with Dutch oncology care professionals, hospital and division directors, patients, payers and industry. The analysis was guided by the Non-adoption, Abandonment, Scale-up, Spread, and Sustainability framework of new medical technologies and services. Opportunities included: the acquirement of (1) advanced MRI-guided radiotherapy technology with (2) the potential for improved patient outcomes and (3) economic benefits, as well as (4) professional development and (5) a higher hospital quality profile. Barriers included: (1) technical complexities, (2) substantial staffing and structural investments, (3) the current lack of empirical evidence of clinical benefits, (4) professional silos, and (5) the presence of patient referral patterns. While our study confirms the expected technical and clinical prospects from the literature, it also reveals economic, organizational, and socio-political challenges.},
+  file = {/Users/Heni/Zotero/storage/HUJYCDLJ/Hehakaya et al. - 2020 - Problems and Promises of Introducing the Magnetic .pdf}
+}
+
 @article{helmbergerRadiologistsLeadingPosition2013,
   title = {Radiologists’ Leading Position in Image-Guided Therapy},
   author = {Helmberger, Thomas and Martí-Bonmatí, Luis and Pereira, Philippe and Gillams, Alice and Martínez, Jose and Lammer, Johannes and Malagari, Katarina and Gangi, Afshin and de Baere, Thierry and Adam, E. Jane and Rasch, Coen and Budach, Volker and Reekers, Jim A.},
@@ -281,6 +297,27 @@
   abstract = {Image-guided diagnostic and therapeutic procedures are related to, or performed under, some kind of imaging. Such imaging may be direct inspection (as in open surgery) or indirect inspection as in endoscopy or laparoscopy. Common to all these techniques is the transformation of optical and visible information to a monitor or the eye of the operator. Image-guided therapy (IGT) differs by using processed imaging data acquired before, during and after a wide range of different imaging techniques. This means that the planning, performing and monitoring, as well as the control of the therapeutic procedure, are based and dependent on the “virtual reality” provided by imaging investigations. Since most of such imaging involves radiology in the broadest sense, there is a need to characterise IGT in more detail. In this paper, the technical, medico-legal and medico-political issues will be discussed. The focus will be put on state-of-the-art imaging, technical developments, methodological and legal requisites concerning radiation protection and licensing, speciality-specific limitations and crossing specialty borders, definition of technical and quality standards, and finally to the issue of awareness of IGT within the medical and public community. The specialty-specific knowledge should confer radiologists with a significant role in the overall responsibility for the imaging-related processes in various non-radiological specialties. These processes may encompass purchase, servicing, quality management, radiation protection and documentation, also taking responsibility for the definition and compliance with the legal requirements regarding all radiological imaging performed by non-radiologists.},
   pmcid = {PMC3579996},
   file = {/Users/Heni/Zotero/storage/6GKAKRY2/Helmberger et al. - 2013 - Radiologists’ leading position in image-guided the.pdf}
+}
+
+@article{jacobs4DFlowVs2020,
+  title = {{{4D Flow}} vs. {{2D Cardiac MRI}} for the {{Evaluation}} of {{Pulmonary Regurgitation}} and {{Ventricular Volume}} in {{Repaired Tetralogy}} of {{Fallot}}: {{A}} Retrospective Case Control Study},
+  shorttitle = {{{4D Flow}} vs. {{2D Cardiac MRI}} for the {{Evaluation}} of {{Pulmonary Regurgitation}} and {{Ventricular Volume}} in {{Repaired Tetralogy}} of {{Fallot}}},
+  author = {Jacobs, Kimberley G. and Chan, Frandics P. and Cheng, Joseph Y. and Vasanawala, Shreyas S. and Maskatia, Shiraz A.},
+  date = {2020-04},
+  journaltitle = {The international journal of cardiovascular imaging},
+  shortjournal = {Int J Cardiovasc Imaging},
+  volume = {36},
+  number = {4},
+  eprint = {31894524},
+  eprinttype = {pmid},
+  pages = {657--669},
+  issn = {1569-5794},
+  doi = {10.1007/s10554-019-01751-1},
+  url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8018898/},
+  urldate = {2021-09-30},
+  abstract = {Purpose - Long exam times and breath-holding limit the use of pediatric cardiac MRI (CMR). 3D time-resolved flow (4DF) MRI is a short, free-breathing, single-sequence exam that obtains magnitude and phase contrast data. We compare the precision of gadobenate dimeglumine-enhanced 4DF CMR on 1.5T MRI with 2D CMR in patients with repaired tetralogy of Fallot (rTOF) to measure pulmonary net flow (PNF), pulmonary forward flow (FF) and ventricular volumetry. Methods and Results - A blinded observer segmented 34 exams. Assessment of PNF using 4DF at the pulmonary valve demonstrated the strongest correlation (r=0.87) and lowest mean difference (3.5±9.4 mL/beat) to aortic net flow (ANF). FF and stroke volume demonstrated moderate-strong correlation when obtained with 4DF (r=0.66–0.81, p{$<$}0.001) and 2D CMR (r=0.81–0.84, p{$<$}0.001) with no significant difference in correlation coefficients or mean differences between techniques. 4DF and 2D ventricular volumes demonstrated strong correlations (r=0.75–0.96); right ventricle (RV) volumes by 4DF overestimated those obtained by 2D CMR by 11.8–19.2 mL/beat. Inter-rater reliability was excellent for both 2D and 4DF volumes (LV ICC: 0.83–0.97 and 0.91–0.95, respectively; RV ICC: 0.98 and 0.98–0.99, respectively). Ejection fraction demonstrated moderate correlation (r=0.60–0.75) with improved reliability for 4DF (ICC: 0.78–0.79) relative to 2D CMR (ICC:0.69–0.89). 4DF exams were shorter than 2D (9 vs. 71 minutes, p{$<$}0.001). Conclusions - In conclusion, patients with rTOF, 4DF CMR is comparable to 2D CMR for evaluation of flow and ventricular volumes with slight overestimation of RV volumes. When RV systolic function is normal on echo, 4DF alone may be considered for interval assessments.},
+  pmcid = {PMC8018898},
+  file = {/Users/Heni/Zotero/storage/ABCGTL8C/Jacobs et al. - 2020 - 4D Flow vs. 2D Cardiac MRI for the Evaluation of P.pdf}
 }
 
 @article{jagsiRespiratoryMotionHeart2007b,
@@ -563,6 +600,26 @@
   file = {/Users/Heni/Zotero/storage/ZFCNFU5W/Optimum Strategies for Using Adobe Photoshop CS2 i.pdf}
 }
 
+@article{paulson4DMRIDrivenMRguided2020,
+  title = {{{4D}}-{{MRI}} Driven {{MR}}-Guided Online Adaptive Radiotherapy for Abdominal Stereotactic Body Radiation Therapy on a High Field {{MR}}-{{Linac}}: {{Implementation}} and Initial Clinical Experience},
+  shorttitle = {{{4D}}-{{MRI}} Driven {{MR}}-Guided Online Adaptive Radiotherapy for Abdominal Stereotactic Body Radiation Therapy on a High Field {{MR}}-{{Linac}}},
+  author = {Paulson, Eric S. and Ahunbay, Ergun and Chen, Xinfeng and Mickevicius, Nikolai J. and Chen, Guang-Pei and Schultz, Christopher and Erickson, Beth and Straza, Michael and Hall, William A. and Li, X. Allen},
+  date = {2020-05-15},
+  journaltitle = {Clinical and Translational Radiation Oncology},
+  shortjournal = {Clin Transl Radiat Oncol},
+  volume = {23},
+  eprint = {32490218},
+  eprinttype = {pmid},
+  pages = {72--79},
+  issn = {2405-6308},
+  doi = {10.1016/j.ctro.2020.05.002},
+  url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7256110/},
+  urldate = {2021-09-30},
+  abstract = {•               This is the first clinical use of 4D-MRI in an online radiation therapy workflow.                                         •               Eleven patients received SBRT on an Elekta MR-Linac using ATP and ATS workflows.                                         •               A parallel contour editing approach was successfully utilized in the ATS workflow.},
+  pmcid = {PMC7256110},
+  file = {/Users/Heni/Zotero/storage/8IBCRZNK/Paulson et al. - 2020 - 4D-MRI driven MR-guided online adaptive radiothera.pdf}
+}
+
 @online{postdicomTop25Free,
   title = {Top 25 {{Free Dicom Viewers}} for {{Doctors}}, {{Medical Students}}, and {{Health Professionals}}},
   author = {{postDICOM}},
@@ -710,6 +767,25 @@
   url = {https://training.seer.cancer.gov/treatment/radiation/types.html},
   urldate = {2021-09-11},
   file = {/Users/Heni/Zotero/storage/BMRQXR8C/types.html}
+}
+
+@article{usmanFreeBreathingWholeheart2017,
+  title = {Free Breathing Whole-Heart {{3D CINE MRI}} with Self-Gated {{Cartesian}} Trajectory},
+  author = {Usman, M. and Ruijsink, B. and Nazir, M.S. and Cruz, G. and Prieto, C.},
+  date = {2017-05},
+  journaltitle = {Magnetic Resonance Imaging},
+  shortjournal = {Magn Reson Imaging},
+  volume = {38},
+  eprint = {28034638},
+  eprinttype = {pmid},
+  pages = {129--137},
+  issn = {0730-725X},
+  doi = {10.1016/j.mri.2016.12.021},
+  url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5375620/},
+  urldate = {2021-09-30},
+  abstract = {•               A novel self-gated 3D Cartesian acquisition is proposed for free breathing whole-heart cardiac MRI                                         •               The proposed framework has efficient k-space sampling, better eddy current performance and high computational efficiency                                         •               The Proposed method is able to achieve high spatio-temporal resolution 3D cardiac CINE                                         •               The proposed method only requires four to five minute free breathing scan},
+  pmcid = {PMC5375620},
+  file = {/Users/Heni/Zotero/storage/9V8BT478/Usman et al. - 2017 - Free breathing whole-heart 3D CINE MRI with self-g.pdf}
 }
 
 @article{vangeunsBasicPrinciplesMagnetic1999,
