--- a/LaTeX/Literature.bib
+++ b/LaTeX/Literature.bib
@@ -299,6 +299,20 @@
   file = {/Users/Heni/Zotero/storage/6GKAKRY2/Helmberger et al. - 2013 - Radiologists’ leading position in image-guided the.pdf}
 }
 
+@online{jabriSpaceTimeCorrespondenceContrastive2020,
+  title = {Space-{{Time Correspondence}} as a {{Contrastive Random Walk}}},
+  author = {Jabri, Allan and Owens, Andrew and Efros, Alexei A.},
+  date = {2020-12-03},
+  eprint = {2006.14613},
+  eprinttype = {arxiv},
+  primaryclass = {cs, eess},
+  url = {http://arxiv.org/abs/2006.14613},
+  urldate = {2021-10-10},
+  abstract = {This paper proposes a simple self-supervised approach for learning a representation for visual correspondence from raw video. We cast correspondence as prediction of links in a space-time graph constructed from video. In this graph, the nodes are patches sampled from each frame, and nodes adjacent in time can share a directed edge. We learn a representation in which pairwise similarity defines transition probability of a random walk, so that long-range correspondence is computed as a walk along the graph. We optimize the representation to place high probability along paths of similarity. Targets for learning are formed without supervision, by cycle-consistency: the objective is to maximize the likelihood of returning to the initial node when walking along a graph constructed from a palindrome of frames. Thus, a single path-level constraint implicitly supervises chains of intermediate comparisons. When used as a similarity metric without adaptation, the learned representation outperforms the self-supervised state-of-the-art on label propagation tasks involving objects, semantic parts, and pose. Moreover, we demonstrate that a technique we call edge dropout, as well as self-supervised adaptation at test-time, further improve transfer for object-centric correspondence.},
+  archiveprefix = {arXiv},
+  keywords = {Computer Science - Computer Vision and Pattern Recognition,Computer Science - Machine Learning,Electrical Engineering and Systems Science - Image and Video Processing}
+}
+
 @article{jacobs4DFlowVs2020,
   title = {{{4D Flow}} vs. {{2D Cardiac MRI}} for the {{Evaluation}} of {{Pulmonary Regurgitation}} and {{Ventricular Volume}} in {{Repaired Tetralogy}} of {{Fallot}}: A Retrospective Case Control Study},
   shorttitle = {{{4D Flow}} vs. {{2D Cardiac MRI}} for the {{Evaluation}} of {{Pulmonary Regurgitation}} and {{Ventricular Volume}} in {{Repaired Tetralogy}} of {{Fallot}}},
@@ -736,7 +750,7 @@
   doi = {10.1007/978-3-030-00946-5},
   url = {http://link.springer.com/10.1007/978-3-030-00946-5},
   urldate = {2021-08-04},
-  isbn = {978-3-030-00945-8 978-3-030-00946-5},
+  isbn = {978-3-030-00945-8},
   langid = {english},
   file = {/Users/Heni/Zotero/storage/XR5D74CH/Stoyanov et al. - 2018 - Image Analysis for Moving Organ, Breast, and Thora.pdf}
 }
